actualizacion de indicadores

--- a/panelweb/WebContent/template/template.xhtml
+++ b/panelweb/WebContent/template/template.xhtml
@@ -21,6 +21,8 @@
 				<p:submenu label="Grupos" icon="ui-icon-grip-diagonal-se"> 
 					<p:menuitem icon="ui-icon-document" value="Nuevo" url="/paginas/admin/nuevoGrupo.xhtml" />
 					<p:separator />
+					<p:menuitem icon="ui-icon-search" value="Ver" url="/paginas/admin/nuevoGrupo.xhtml" />
+					<p:separator />
 					<p:menuitem icon="ui-icon-pencil" value="Actualizar" url="/paginas/admin/editarGrupos.xhtml" />
 					<p:separator />
 					<p:menuitem icon="ui-icon-trash" value="Eliminar" 
