--- a/panelweb/WebContent/template/template.xhtml
+++ b/panelweb/WebContent/template/template.xhtml
@@ -18,85 +18,119 @@
 		<h:form id="formBarra">
 			<p:growl id="messages" />
 			<p:menubar id="menuBar">
-				<p:submenu label="Grupos" icon="ui-icon-grip-diagonal-se"> 
-					<p:menuitem icon="ui-icon-document" value="Nuevo" url="/paginas/admin/nuevoGrupo.xhtml" />
+				<p:submenu label="Grupos" icon="ui-icon-grip-diagonal-se">
+					<p:menuitem icon="ui-icon-document" value="Nuevo"
+						url="/paginas/admin/nuevoGrupo.xhtml" />
 					<p:separator />
-					<p:menuitem icon="ui-icon-search" value="Ver" url="/paginas/admin/nuevoGrupo.xhtml" />
+					<p:menuitem icon="ui-icon-search" value="Ver"
+						url="/paginas/admin/verGrupos.xhtml" />
 					<p:separator />
-					<p:menuitem icon="ui-icon-pencil" value="Actualizar" url="/paginas/admin/editarGrupos.xhtml" />
+					<p:menuitem icon="ui-icon-pencil" value="Actualizar"
+						url="/paginas/admin/editarGrupos.xhtml" />
 					<p:separator />
-					<p:menuitem icon="ui-icon-trash" value="Eliminar" 
+					<p:menuitem icon="ui-icon-trash" value="Eliminar"
 						url="/paginas/admin/eliminarGrupos.xhtml" />
 				</p:submenu>
-			
+
 				<p:submenu label="Indicador" icon="ui-icon-image">
-					<p:menuitem icon="ui-icon-document" value="Nuevo" url="/paginas/admin/nuevoIndicador.xhtml" />
+					<p:menuitem icon="ui-icon-document" value="Nuevo"
+						url="/paginas/admin/nuevoIndicador.xhtml" />
 					<p:separator />
-					<p:menuitem icon="ui-icon-pencil" value="Actualizar"  disabled="#{menuVista.indicador.idIndicador == 0}" url="/paginas/admin/editarIndicador.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+					<p:menuitem icon="ui-icon-search" value="Ver"
+						url="/paginas/admin/verIndicadores.xhtml" />
 					<p:separator />
-					<p:menuitem icon="ui-icon-trash" value="Eliminar" 
+					<p:menuitem icon="ui-icon-pencil" value="Actualizar"
+						disabled="#{menuVista.indicador.idIndicador == 0}"
+						url="/paginas/admin/editarIndicador.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+					<p:separator />
+					<p:menuitem icon="ui-icon-trash" value="Eliminar"
 						url="/paginas/admin/eliminarIndicadores.xhtml" />
 				</p:submenu>
-				<p:submenu rendered="#{menuVista.indicador.idIndicador != 0}" label="Filtros" icon="ui-icon-search">
+				<p:submenu rendered="#{menuVista.indicador.idIndicador != 0}"
+					label="Filtros" icon="ui-icon-search">
 					<p:submenu label="Nuevo" icon="ui-icon-document">
-						<p:menuitem value="Filtros de Indicador"
-							url="/paginas/admin/crearFiltrosIndicador.xhtml?ind=#{menuVista.indicador.idIndicador}" />
-						<p:separator />
-						<p:menuitem value="Filtros de Serie"
+
+						<p:menuitem value="Filtros de series"
 							url="/paginas/admin/crearFiltrosSerie.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+						<p:separator />
+						<p:menuitem value="Filtros de indicador"
+							url="/paginas/admin/crearFiltrosIndicador.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+						
+					
 					</p:submenu>
 					<p:separator />
-					<p:menuitem icon="ui-icon-pencil" value="Actualizar" url="/paginas/admin/configurarFiltros.xhtml?ind=#{menuVista.indicador.idIndicador}" />
-						
-					<p:separator />
-					<p:menuitem icon="ui-icon-trash" value="Eliminar" url="/paginas/admin/eliminarFiltros.xhtml?ind=#{menuVista.indicador.idIndicador}" />
-				</p:submenu>
-
-				<p:submenu label="Serie" rendered="#{menuVista.indicador.idIndicador != 0}" icon="ui-icon-grip-dotted-horizontal">
-				
-					<p:menuitem icon="ui-icon-document" value="Nuevo" url="/paginas/admin/crearIndicadorSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />
-					<p:separator />
-					<p:menuitem icon="ui-icon-pencil" value="Actualizar"   url="/paginas/admin/editarIndicadorSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />						
-				
-					<p:separator />
-					<p:menuitem icon="ui-icon-wrench" value="Filtros" url="/paginas/admin/configurarFiltrosSeries.xhtml?ind=#{menuVista.indicador.idIndicador}"/>
-			
-					<p:separator />
-					<p:menuitem icon="ui-icon-trash" value="Eliminar" url="/paginas/admin/eliminarIndicadorSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+					<p:menuitem icon="ui-icon-search" value="Ver"
+						url="/paginas/admin/verFiltros.xhtml?ind=#{menuVista.indicador.idIndicador}" />
 					
+					<p:separator />
+					<p:menuitem icon="ui-icon-pencil" value="Actualizar"
+						url="/paginas/admin/configurarFiltros.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+
+					<p:separator />
+					<p:menuitem icon="ui-icon-trash" value="Eliminar"
+						url="/paginas/admin/eliminarFiltros.xhtml?ind=#{menuVista.indicador.idIndicador}" />
 				</p:submenu>
-				
+
+				<p:submenu label="Serie"
+					rendered="#{menuVista.indicador.idIndicador != 0}"
+					icon="ui-icon-grip-dotted-horizontal">
+					
+
+					<p:menuitem icon="ui-icon-document" value="Nuevo"
+						url="/paginas/admin/crearIndicadorSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+					<p:separator />
+					<p:menuitem icon="ui-icon-search" value="Ver"
+						url="/paginas/admin/verIndicadorSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+
+					<p:separator />
+					<p:menuitem icon="ui-icon-pencil" value="Actualizar"
+						url="/paginas/admin/editarIndicadorSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+
+					<p:separator />
+					<p:menuitem icon="ui-icon-wrench" value="Conf. filtros de series"
+						url="/paginas/admin/configurarFiltrosSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+
+					<p:separator />
+					<p:menuitem icon="ui-icon-trash" value="Eliminar"
+						url="/paginas/admin/eliminarIndicadorSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+
+				</p:submenu>
 
 
-				<f:facet name="options">	
-		<h:panelGrid columns="3">
+
+				<f:facet name="options">
+					<h:panelGrid columns="3">
 			Tema: 
-	        <p:themeSwitcher value="#{selectOneView.option}" id="basic" style="width:165px">
-	            <f:selectItems value="#{selectOneView.themes}" var="theme" itemLabel="#{theme.displayName}" itemValue="#{theme.name}" />
-	        	<p:ajax event="change" listener="#{selectOneView.guardarCambios}" />
-	        </p:themeSwitcher>
-      		<p:commandButton action="#{loginMgmtBean.logout}"  ajax="false" value="Salir"
-			icon="ui-icon-extlink" />
-  		</h:panelGrid>
-		
+	        <p:themeSwitcher value="#{selectOneView.option}" id="basic"
+							style="width:165px">
+							<f:selectItems value="#{selectOneView.themes}" var="theme"
+								itemLabel="#{theme.displayName}" itemValue="#{theme.name}" />
+							<p:ajax event="change" listener="#{selectOneView.guardarCambios}" />
+						</p:themeSwitcher>
+						<p:commandButton action="#{loginMgmtBean.logout}" ajax="false"
+							value="Salir" icon="ui-icon-extlink" />
+					</h:panelGrid>
+
 				</f:facet>
 			</p:menubar>
 		</h:form>
 	</ui:insert>
 
-	<p:layout  fullPage="false" style="margin-top:10px;">
-		<p:layoutUnit position="west"  size="300" header="Usuario: #{menuVista.usuario.nombre}"
-			resizable="true" closable="true" collapsible="true">
+	<p:layout fullPage="false" style="margin-top:10px;">
+		<p:layoutUnit position="west" size="300"
+			header="Usuario: #{menuVista.usuario.nombre}" resizable="true"
+			closable="true" collapsible="true">
 			<ui:insert name="left">
 				<h:form id="menuForm">
-					<p:selectOneListbox  id="lbxIndicadores" value="#{menuVista.opcion}"
+					<p:selectOneListbox id="lbxIndicadores" value="#{menuVista.opcion}"
 						style="width:90%">
 						<c:forEach var="indicador" items="#{menuVista.indicadores}"
 							varStatus="index">
 							<f:selectItem itemLabel="#{indicador.nombre}"
 								itemValue="${index.count}" />
 						</c:forEach>
-						<p:ajax listener="#{menuVista.redireccionarAGrafico}" event="click" />
+						<p:ajax listener="#{menuVista.redireccionarAGrafico}"
+							event="click" />
 					</p:selectOneListbox>
 					<p:growl autoUpdate="true" showDetail="true" />
 				</h:form>
@@ -110,45 +144,63 @@
 					<c:if test="#{menuVista.indicador.idIndicador != 0}">
 						<p:toolbar>
 							<f:facet name="left">
-								<p:menuButton value="Filtros">
-									<p:menuitem value="Filtrar Datos"  icon="ui-icon-search"  url="/paginas/admin/configurarFiltrosIndicador.xhtml?ind=#{menuVista.indicador.idIndicador}" />
+								<p:commandButton icon="ui-icon-info" value="Indicador" />
+								
+								<span class="ui-separator">
+					                <span class="ui-icon ui-icon-grip-dotted-vertical" />
+					            </span>
+								
+								<p:commandButton id="filtroBtn"
+									actionListener="#{filtrosConfiguracion.obtenerConfigurados}"
+									icon="ui-icon-info" value="Filtros" title="Ver filtros configurados">
+									<f:param name="idIndicador"
+										value="#{menuVista.indicador.idIndicador}" />
+								</p:commandButton>
+							</f:facet>
+							
+							<f:facet name="right">
+								
+								<p:menuButton  value="Consultar">
+									<p:menuitem value="Consultar nuevos datos" icon="ui-icon-search"
+										url="/paginas/admin/configurarFiltrosIndicador.xhtml?ind=#{menuVista.indicador.idIndicador}" />
 								</p:menuButton>
 							</f:facet>
-							<f:facet name="right">
-								<p:commandButton id="filtroBtn" actionListener="#{filtrosConfiguracion.obtenerConfigurados}" icon="ui-icon-search" title="Ver" value="Ver">
-									<f:param name="idIndicador" value="#{menuVista.indicador.idIndicador}" />
-								</p:commandButton>
-			        		</f:facet>
+							
+
 						</p:toolbar>
-						
+
 					</c:if>
-					<p:outputLabel rendered="#{menuVista.indicador.idIndicador == 0}" value="El indicador no existe, o ha sido eliminado" />
-					
-					<p:overlayPanel id="filtrosPanel" for="filtroBtn" hideEffect="fade" dynamic="true"  style="width:600px">
-				        <p:dataTable var="filtro" value="#{filtrosConfiguracion.filtrosConfigurados}" rows="5" paginator="true">
-       				
-        				<p:column headerText="Nombre">
-        					<h:outputText value="#{filtro.nombre}" />
-        				</p:column>
-        				
-        				<p:column headerText="Indice">
-        					<h:outputText value="#{filtro.indiceFiltro}" />
-        				</p:column>
-        				
-						<p:column headerText="Dueno">
-							<p:outputLabel
-								value="#{(filtro.anivelIndicador=='S')?'INDICADOR':'SERIE'}" />
-						</p:column>
-				        </p:dataTable>
-				    </p:overlayPanel>
-				    
+					<p:outputLabel rendered="#{menuVista.indicador.idIndicador == 0}"
+						value="El indicador no existe, o ha sido eliminado" />
+
+					<p:overlayPanel id="filtrosPanel" for="filtroBtn" hideEffect="fade"
+						dynamic="true" style="width:600px">
+						<p:dataTable var="filtro"
+							value="#{filtrosConfiguracion.filtrosConfigurados}" rows="5"
+							paginator="true">
+
+							<p:column headerText="Nombre">
+								<h:outputText value="#{filtro.nombre}" />
+							</p:column>
+
+							<p:column headerText="Orden">
+								<h:outputText value="#{filtro.indiceFiltro}" />
+							</p:column>
+
+							<p:column headerText="Nivel">
+								<p:outputLabel
+									value="#{(filtro.anivelIndicador=='S')?'INDICADOR':'SERIE'}" />
+							</p:column>
+						</p:dataTable>
+					</p:overlayPanel>
+
 				</ui:insert>
 				<ui:insert name="content">
 			        			Center
 			    </ui:insert>
 			</h:form>
-			
-			
+
+
 		</p:layoutUnit>
 
 
