actualizacion de series

--- a/panelweb/WebContent/template/template.xhtml
+++ b/panelweb/WebContent/template/template.xhtml
@@ -196,18 +196,31 @@
 						<p:dataTable var="filtro" emptyMessage="No hay filtros configurados"
 							value="#{filtrosConfiguracion.filtrosConfigurados}" rows="5"
 							paginator="true">
+							
+							<p:column headerText="Orden" footerText="contiene" filterBy="#{filtro.indiceFiltro}"  filterFunction="#{filterView.filterByName}"  >
+								<h:outputText value="#{filtro.indiceFiltro}" />
+							</p:column>
 
 							<p:column headerText="Filtro" footerText="contiene" filterBy="#{filtro.nombre}"  filterFunction="#{filterView.filterByName}"  >
 								<h:outputText value="#{filtro.nombre}" />
 							</p:column>
 
-							<p:column headerText="Orden" footerText="contiene" filterBy="#{filtro.indiceFiltro}"  filterFunction="#{filterView.filterByName}"  >
-								<h:outputText value="#{filtro.indiceFiltro}" />
-							</p:column>
+						<p:column headerText="Valor">		
+									
+							<h:outputText rendered="#{filtro.anivelIndicador=='S'}" value="#{filtro.valorInicial}" />
+							
+				             <p:commandButton rendered="#{filtro.anivelIndicador=='N'}" update=":form:serieFiltroValorDetalles" oncomplete="PF('seriesFiltrosValorDialogos').show()" icon="ui-icon-search" title="Ver detalle">
+				                <f:setPropertyActionListener value="#{filtro}" target="#{filtrosConfiguracion.selectedFiltro}" />
+				            </p:commandButton>
+			            							
+						</p:column>
 
 							<p:column headerText="Nivel" footerText="contiene" filterBy="#{filtro.anivelVisual}"  filterFunction="#{filterView.filterByName}" >
 								<p:outputLabel value="#{filtro.anivelVisual}" />
 							</p:column>
+							
+							
+							
 						</p:dataTable>
 					</p:overlayPanel>
 
@@ -288,6 +301,27 @@
 			     
 			        </p:outputPanel>
 			    </p:dialog>
+			    
+				<p:dialog header=" Info: filtros de series" widgetVar="seriesFiltrosValorDialogos"
+					 showEffect="fade" hideEffect="fade"
+					resizable="false">
+					<p:outputPanel id="serieFiltroValorDetalles"  style="text-align:center;">
+				        
+				            
+				            <p:dataTable value="#{filtrosConfiguracion.indicadorSerieFiltros}" style="width:600px;" var="indicadorSerieFiltro">
+				            	<p:column headerText="Serie"  footerText="contiene" filterBy="#{indicadorSerieFiltro.indicadorSery.nombre}"  filterFunction="#{filterView.filterByName}"  >
+				            		<h:outputText value="#{indicadorSerieFiltro.indicadorSery.nombre}"/>
+				            	</p:column>
+				            	<p:column headerText="Filtro">
+				            		<h:outputText value="#{indicadorSerieFiltro.filtro.nombre}"/>
+				            	</p:column>
+				            	<p:column headerText="Valor">
+				            		<h:outputText value="#{indicadorSerieFiltro.valor}"/>
+				            	</p:column>
+				            </p:dataTable>
+			           
+					</p:outputPanel>
+				</p:dialog>
 
 			</h:form>
 
