log de usuarios

--- a/panelweb/WebContent/template/template.xhtml
+++ b/panelweb/WebContent/template/template.xhtml
@@ -95,6 +95,14 @@
 						url="/paginas/admin/eliminarIndicadorSeries.xhtml?ind=#{menuVista.indicador.idIndicador}" />
 
 				</p:submenu>
+				
+				<p:submenu label="Historial"  icon="ui-icon-person">
+
+					<p:menuitem icon="ui-icon-search" value="consultar historial"
+						url="/paginas/admin/historial.xhtml" />
+					<p:separator />
+
+				</p:submenu>
 
 
 				<f:facet name="options">
