--- a/panelweb/WebContent/template/template.xhtml
+++ b/panelweb/WebContent/template/template.xhtml
@@ -151,12 +151,12 @@
 				<h:form id="menuForm">
 					<p:selectOneListbox id="lbxIndicadores" value="#{menuVista.opcion}"
 						style="width:90%">
-						<c:forEach var="indicador" items="#{menuVista.indicadores}"
+						<c:forEach var="indicador"  items="#{menuVista.indicadores}"
 							varStatus="index">
-							<f:selectItem itemLabel="#{indicador.nombre}"
+							<f:selectItem   itemLabel="#{indicador.nombre}"
 								itemValue="${index.count}" />
 						</c:forEach>
-						<p:ajax listener="#{menuVista.redireccionarAGrafico}"
+						<p:ajax  listener="#{menuVista.redireccionarAGrafico}"
 							event="click" />
 					</p:selectOneListbox>
 					<p:growl autoUpdate="true" showDetail="true" />
@@ -247,7 +247,7 @@
 
 					</c:if>
 					<p:outputLabel rendered="#{menuVista.indicador.idIndicador == 0}"
-						value="Aviso: El indicador no existe, o ha sido eliminado" />
+						value="El indicador no existe, o ha sido eliminado" />
 
 
 
